--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 			href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@700&display=swap"
 			rel="stylesheet"
 		/>
+		<link rel="shortcut icon" href="./assets/icons/tomato.png" type="image/x-icon">
         <link rel="stylesheet" href="./styles.css">
 	</head>
 	<body>
